tests/machine/x/go/group_items_iteration.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_items_iteration.go:54:23: x.Val undefined (type any has no field or method Val)
tests/machine/x/go/group_items_iteration.go:62:11: cannot use g.Key (variable of interface type any) as string value in struct literal: need type assertion
